--- a/BSNGP9_0331/BSNGP9_orarend.html
+++ b/BSNGP9_0331/BSNGP9_orarend.html
@@ -6,9 +6,101 @@
   <meta name="Author" content="">
   <meta name="Keywords" content="">
   <meta name="Description" content="">
-  <title>Document</title>
+  <title>Órarend</title>
  </head>
  <body>
-  
+    <font style="font-family:calibri"><h2>Órarend</h2></font>
+
+
+
+
+<table border="1" cellspacing="0" cellpadding="0" style="table-layout:fixed; font-family:calibri; font-size:12pt; color:black; font-weight:bold">
+
+	
+
+
+	<tr style="font-size:14pt">
+
+		<th> <em></em> </th>
+		<th> <em>Hétfő </em> </th>
+		<th> <em>Kedd</em> </th>
+		<th> <em>Szerda</em> </th>
+	</tr>
+
+
+
+		<tr style="height:60px">
+
+			<td style="width:50px; text-align:center; border:1px black solid">8:00-9:00</td>
+			<td style="width:100px; text-align:center; border:1px black solid">Méréstech/Termelői rendszerek</td>
+			<td style="width:100px; text-align:center; border:1px black solid">Analízis II</td>
+			<td style="width:100px; text-align:center; border:1px black solid">Webtech</td>
+		</tr>
+
+		<tr style="height:60px">
+
+			<td style="width:50px; text-align:center; border:1px black solid">9:00-10:00</td>
+			<td style="width:100px; text-align:center; border:1px black solid">Méréstech/Termelői rendszerek</td>
+			<td style="width:100px; text-align:center; border:1px black solid">Analízis II</td>
+			<td style="width:100px; text-align:center; border:1px black solid">Webtech</td>
+				</tr>
+			
+			<tr style="height:60px">
+				<td style="width:50px; text-align:center; border:1px black solid">10:00-11:00</td>
+				<td style="width:100px; text-align:center; border:1px black solid">Méréstech</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid">Webtech</td>
+			</tr>
+
+			<tr style="height:60px">
+				<td style="width:50px; text-align:center; border:1px black solid">11:00-12:00</td>
+				<td style="width:100px; text-align:center; border:1px black solid">Méréstech</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid">Webtech</td>
+			</tr>
+
+			<tr style="height:60px">
+				<td style="width:50px; text-align:center; border:1px black solid">12:00-13:00</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid">Autóelektronika</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+			</tr>
+
+			<tr style="height:60px">
+				<td style="width:50px; text-align:center; border:1px black solid">13:00-14:00</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid">Autóelektronika</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+			</tr>
+
+			<tr style="height:60px">
+				<td style="width:50px; text-align:center; border:1px black solid">14:00-15:00</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid">Vezetés szervezés</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+			</tr>
+
+			<tr style="height:60px">
+				<td style="width:50px; text-align:center; border:1px black solid">15:00-16:00</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid">Vezetés szervezés</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+			</tr>
+
+			<tr style="height:60px">
+				<td style="width:50px; text-align:center; border:1px black solid">16:00-17:00</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid">Autóelektronika</td>
+			</tr>
+
+			<tr style="height:60px">
+				<td style="width:50px; text-align:center; border:1px black solid">17:00-18:00</td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid"></td>
+				<td style="width:100px; text-align:center; border:1px black solid">Autóelektronika</td>
+			</tr>
+
+		</table>
  </body>
 </html>
